# nea_2025

./: .gitignore  .prettierrc  Cargo.toml  README.md  TESTING.md  TODO.md  bun.lockb  package.json
apps/desktop/: package.json  svelte.config.js  vite.config.js
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  logging_config.yaml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: auth.rs  game_session.rs  lib.rs  listener.rs  request.rs  telemetry_session.rs
apps/desktop/src-tauri/src/telemetry/: mod.rs  packet.rs
apps/desktop/src-tauri/src/telemetry/packet/: car_damage.rs  car_setups.rs  car_status.rs  final_classification.rs  motion.rs  motion_ex.rs  participants.rs  session.rs  tyre_sets.rs
apps/desktop/src/lib/: db.ts
apps/web/: .prettierrc  drizzle.config.ts  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
apps/web/drizzle/: 0000_fantastic_matthew_murdock.sql  0001_modern_lucky_pierre.sql  0002_amused_liz_osborn.sql  0003_damp_norrin_radd.sql
apps/web/src/: app.css  app.d.ts  app.html  app.pcss  hooks.server.ts
apps/web/static/: Profile_avatar_placeholder_large.png:Zone.Identifier  (+1 more)
docker/postgresql/: docker-compose.dev.yml
docs/: evaluation.md  style.css  testing.md
docs/analysis/: background.md  modelling.md  objectives.md
docs/design/: algorithms.md  classes.md  documented_design.md  entities.md  normalised_forms.md  processes.md  sql_statements.md  steps.md  validation.md
resources/: example_session_log.txt  udp_spec.md
scripts/: dev.ts  start-minio.ts
(+58 files in other folders)
